<resources>
     <string name="app_name">SIM2PeD</string>
     <string name="action_bar_proceeding_yes">SIM</string>
     <string name="action_bar_proceeding_no">NÃO</string>
     <string name="care_title_tip_details_screen">CUIDADO RELACIONADO: </string>
     <string name="sub_title_remember_alert_care_screen">LEMBRE-SE: </string>
     <string name="notif_need_sync_title">Requer Sincronização</string>
     <string name="notif_need_sync_content">Toque aqui para sincronizar.</string>
     <string name="notif_new_tip_title">Nova Dica</string>
     <string name="notif_new_tip_content">Toque aqui para ver.</string>
     <string name="notif_new_care_title">Vamos cuidar dos pés?</string>
     <string name="notif_new_care_ticker">Se liga! É hora de cuidar dos pés. :)</string>
     <string name="not_synchronizd">Os dados estão sincronizados!</string>
     <string name="not_implementd">Não implementado!</string>
     <string name="error_json_get">Ocorreu um erro [A resposta JSON do servidor pode ser inválida]!</string>
     <string name="error_404">Recurso requisitado não encontrado!</string>
     <string name="error_500">Algo de errado ocorreu com o servidor! :(</string>
     <string name="error_unexpected_error">Ocorreu um erro inesperado</string>
     <string name="error_no_synchronized_data">Dados não sincronizados!</string>
     <string name="error_no_synchronized_data_verify_connection">Dados não sincronizados! Verifique sua conexão.</string>
     <string name="error_no_connection_with_network">[ERRO] Dispositivo não conectado à rede!</string>
     <string name="synchronize">SINCRONIZAR</string>
     <string name="form_button_submit_statistics">ENVIAR DADOS ESTATÍSTICOS</string>
     <string name="form_button_login_action">LOGIN</string>
     <string name="view_procedures_performed">Procedimentos Realizados</string>
     <string name="form_check_history">Historico de respostas</string>
     <string name="form_check_routines">Rotinas</string>
     <string name="form_check_cares">Cuidados</string>
     <string name="form_check_tips">Dicas</string>
     <string name="form_check_user_data">Dados do usuario</string>
     <string name="form_check_contexts">Contextos</string>
     <string name="form_edittext_login_user">Código de Usuário</string>
     <string name="form_edittext_login_password">Senha</string>
     <string name="form_check_login_keep_logged">Manter-me logado</string>
     <string name="form_msg_error_impossible_uncheck_history">É obrigatório o envio do Histórico de respostas.</string>
     <string name="form_msg_error_type_the_password">Por favor, informe sua senha.</string>
     <string name="form_msg_error_type_the_code_user">Por favor, o código do usuário.</string>
     <string name="msg_device_not_suported">Dispositivo não suportado! :(</string>
     <string name="msg_device_note_registered_gcm">Dispositivo não registrado no servidor GCM. Reinicie a aplicação.</string>
     <string name="msg_downloading_datas">Baixando dados…</string>
     <string name="msg_updating_routines">Atualizando Rotinas!</string>
     <string name="msg_updating_data_user">Atualizando Dados do usuário!</string>
     <string name="msg_updating_tips">Atualizando Dicas!</string>
     <string name="msg_updating_contexts">Atualizando Contextos!</string>
     <string name="msg_updating_cares">Atualizando Cuidados!</string>
     <string name="msg_synchronized_data">Dados Sincronizados!</string>
     <string name="msg_is_required_keep_up_logged">É necessário manter-se registrado!</string>
     <string name="msg_verify_credentials_login">Verificando credenciais de login!</string>
     <string name="msg_login_successful">Login bem-sucedido!</string>
     <string name="msg_login_failed">Falha no login. Usuário e senha não correspondem!</string>
     <string name="msg_sending_history_response_n_to_n">Enviando histórico de respostas (%1$s de  %2$s).</string>
     <string name="msg_sending_statistics_usage_n_to_n">Enviando estatísticas de uso (%1$s de  %2$s).</string>
     <string name="msg_no_history">Você ainda não possui histórico.</string>
     <string name="msg_all_data_sent">Todos os dados foram enviados ao servidor.</string>
     <string name="msg_some_data_no_sent">Algumas dados não foram enviados ao servidor.</string>
     <string name="msg_you_do_not_have_data_send">Você não possui dados para envio.</string>
     <string name="msg_nothing_has_been_done">Nada foi feito, eu fui um estúpido.</string>
     <string name="msg_generating_backup">Gerando backup</string>
     <string name="msg_please_wait">Por favor, aguarde</string>
     <string name="msg_care_cogratulations">Parabéns, seus pés estão sendo bem cuidados! :)</string>
     <string name="msg_care_sad">Oh, não! Da próxima lembra de se cuidar. :(</string>
     <string name="fragment_title_procedures">Próximo Procedimento</string>
     <string name="fragment_sub_title_procedures">Próximo procedimento sugerido.</string>
     <string name="fragment_title_procedures_performed">Procedimentos Realizados</string>
     <string name="fragment_sub_title_procedures_performed">O histórico aprezentado é das respostas nas últimas 24h e que ainda não foram enviados ao servidor.</string>
     <string name="fragment_title_send_statistics">Enviar Dados Estatísticos</string>
     <string name="fragment_sub_title_send_statistics">Para uma análise detalhada do terapeuta responsável o envio de dados estatísticos é obrigatório.</string>
     <string name="fragment_title_synchronized">O que gostaria de atualizar?</string>
     <string name="fragment_sub_title_synchronized">Marque o checkbox correspondente ao item.</string>
     <string name="layout_item_procedure_context">Contexto: </string>
     <string name="layout_item_procedure_care">Cuidado sugerido: </string>
     <string name="layout_item_procedure_question_hour">Hora de Alerta: </string>
     <string name="layout_item_procedure_response_hour">Hora da resposta: </string>
     <string name="layout_item_procedure_response">Resposta do usuário ao procedimento: </string>
     <string name="pref_layout">Layout</string>
     <string name="pref_layout_screen_title">Tela de Dicas</string>
     <string name="pref_layout_screen_summary">Como as dicas são exibidas</string>
     <string name="pref_layout_font_size_title">Tamanho da Fonte</string>
     <string name="pref_layout_font_size_summary">Tamanho da fonte na tela de dicas</string>
     <string name="pref_layout_number_of_tip_displayed_title">Número de Dicas Apresentadas</string>
     <string name="pref_layout_number_of_tip_displayed_summary">Número de dicas apresentadas na tela principal do aplicativo</string>
     <string name="pref_alarm">Alarme</string>
     <string name="pref_alarm_early_title">Antecedência do Alarme</string>
     <string name="pref_alarm_early_summary">Tempo em minutos de antecedência que o arlame deve tocar</string>
     <string name="pref_login">Login do Usuário</string>
     <string name="pref_login_logout_title">Logout</string>
     <string name="pref_login_logout_summary">Realizar logout na aplicação</string>
     <string name="pref_backup">Backup</string>
     <string name="pref_backup_title">Salvar Backup</string>
     <string name="pref_backup_summary">Salvar backup de dados estatístico em mídia externa</string>
     <string name="format_date_hour_procedure">%1$s de %2$s às %3$sh%4$sm.</string>
     <string name="format_date_hour_next_procedure">%1$s às %2$sh%3$sm.</string>
     <string name="format_yes_procedure">Sim, procedimento realizado.</string>
     <string name="format_no_procedure">Procedimento não realizado.</string>
    <string name="html_about_app">
        <![CDATA[
        <!DOCTYPE html>
        <html>
            <head>
                <meta name="viewport" content="width=device-width" />
	            <meta charset="UTF-8" />
                <style type="text/css">
                    div {
                        text-align:justify;
                    }
                    a {
                        color: #004E99;
                        text-decoration:none;
                    }
                </style>
            </head>
            <body>
                <div>
                    O <strong>Sistema Inteligente de Monitoramento e Preven&ccedil;&atilde;o do
                    P&eacute; Diab&eacute;tico (SIM2PeD)</strong> &eacute; um aplicativo desenvolvido como
                    parte integrante de um trabalho de diserta&ccedil;&atilde;o para a
                    obten&ccedil;&atilde;o do grau de mestre em Ci&ecirc;ncia da
                    Computa&ccedil;&atilde;o. O <strong>SIM2PeD</strong> tem o objetivo de,
                    com o uso, prevenir o aparecimento de &uacute;ceras nos membros inferiores de
                     indiv&iacute;duos diab&eacute;ticos.
                    <br /><br />
                    Estudo desenvolvido pelo Grupo de Engenharia de Software
                    (<a href="http://ges.uern.br" target="_blank">GES</a>) atrav&eacute;s do
                    programa de P&oacute;s-Gradua&ccedil;&atilde;o em
                    Ci&ecirc;ncia da Computa&ccedil;&atilde;o
                    (<a href="http://http://ppgcc.uern.br/" target="_blank">PPgCC</a>) em parceria com o
                    instituto <a href="http://www.docedesafio.org.br/" target="_blank">Doce Desafio</a>
                    da Universidade de Bras&iacute;lia
                    (<a href="http://www.unb.br/" target="_blank">UnB</a>).
                    <br /><br />
                    <div style="text-align:left">
                        Entre em contato:
                        <a href="mailto:rodriigomedeiros@gmail.com">rodriigomedeiros@gmail.com</a>
                    </div>
                </div>
            </body>
        </html>
        ]]>
    </string>
     <string name="nav_item_sync">3</string>
    <string-array name="nav_drawer_items">
        <item>Dicas</item>
        <item>Procedimentos</item>
        <item>sub_Sobre</item>
        <item>sub_Enviar Dados Estatísticos</item>
        <item>sub_Configurações</item>
    </string-array>
    <string name="clear"/>
</resources>