<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5sp"
    android:paddingBottom="5sp" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/layout_item_procedure_context" />

        <TextView
            android:id="@+id/text_item_list_procedure_contextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/clear"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/layout_item_procedure_care" />

        <TextView
            android:id="@+id/text_item_list_procedure_titleCare"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/clear"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/layout_item_procedure_response_hour"/>

        <TextView
            android:id="@+id/text_item_list_procedure_hourResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/clear"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/layout_item_procedure_response"/>

        <TextView
            android:id="@+id/text_item_list_procedure_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/clear"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:background="@color/border_bottom_box"
            android:id="@+id/border_bottom_item_procedure"/>
    </LinearLayout>

</RelativeLayout>